Houdini is up 🙃 (& minor edits)

--- a/src/config.scss
+++ b/src/config.scss
@@ -19,6 +19,12 @@ $black: #000;
 $white: #fff;
 
 //////////////////////////
+//        FONTS         //
+//////////////////////////
+
+$font: 'Panamera', sans-serif;
+
+//////////////////////////
 //        MIXINS        //
 //////////////////////////
 
