--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,18 +1,50 @@
 @import 'reset-css';
 
-// @font-face {
-//   font-family: 'Open Sans';
-//   src: url(../assets/fonts/opensans-bold-webfont.woff2) format('woff2'),
-//     url(../assets/fonts/opensans-bold-webfont.woff) format('woff'),
-//     url(../assets/fonts/opensans-bold-webfont.ttf) format('truetype');
-//   font-weight: 700;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: 'Panamera';
+  font-weight: 900;
+  src: url('../assets/fonts/panamera/Panamera-Bold.eot');
+  src: url('../assets/fonts/panamera/Panamera-Bold.eot?#iefix')
+      format('embedded-opentype'),
+    url('../assets/fonts/panamera/Panamera-Bold.woff2') format('woff2'),
+    url('../assets/fonts/panamera/Panamera-Bold.woff') format('woff'),
+    url('../assets/fonts/panamera/Panamera-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Panamera';
+  font-weight: 200;
+  src: url('../assets/fonts/panamera/Panamera-Light.eot');
+  src: url('../assets/fonts/panamera/Panamera-Light.eot?#iefix')
+      format('embedded-opentype'),
+    url('../assets/fonts/panamera/Panamera-Light.woff2') format('woff2'),
+    url('../assets/fonts/panamera/Panamera-Light.woff') format('woff'),
+    url('../assets/fonts/panamera/Panamera-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Panamera';
+  font-weight: 400;
+  src: url('../assets/fonts/panamera/Panamera-Regular.eot');
+  src: url('../assets/fonts/panamera/Panamera-Regular.eot?#iefix')
+      format('embedded-opentype'),
+    url('../assets/fonts/panamera/Panamera-Regular.woff2') format('woff2'),
+    url('../assets/fonts/panamera/Panamera-Regular.woff') format('woff'),
+    url('../assets/fonts/panamera/Panamera-Regular.ttf') format('truetype');
+}
 
 :global {
   html {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: none;
     overflow-x: hidden;
+  }
+
+  .page {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
