--- a/src/components/typography/styles.scss
+++ b/src/components/typography/styles.scss
@@ -1,16 +1,19 @@
 .title {
-  font-family: sans-serif;
-  font-size: 36px;
+  font-family: $font;
+  font-size: 80px;
   text-transform: uppercase;
+  color: $mineShaft;
 }
 
 .subtitle {
-  font-family: sans-serif;
-  font-size: 24px;
-  text-transform: uppercase;
+  font-family: $font;
+  font-size: 10px;
+  font-weight: 900;
+  color: $silver;
 }
 
 .text {
-  font-family: sans-serif;
+  font-family: $font;
   font-size: 16px;
+  color: $mineShaft;
 }
