--- a/src/config.scss
+++ b/src/config.scss
@@ -18,6 +18,10 @@ $hsm: 500;
 $black: #000;
 $white: #fff;
 
+$wildSand: #f5f5f5; // Background on clear theme
+$mineShaft: #202020; // Title color
+$silver: #a3a3a3; // Subtitle color, separator
+
 //////////////////////////
 //        FONTS         //
 //////////////////////////
