--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,11 +1,74 @@
 .Home {
   composes: page from global;
 
-  font-family: $font;
-  background-color: blue;
+  background-color: $wildSand;
 
-  .title {
-    color: $white;
-    margin-bottom: 20px;
+  .left,
+  .right {
+    position: absolute;
+    top: 0;
+    width: 15%;
+    max-width: 300px;
+    height: 100%;
+  }
+
+  .top,
+  .bottom {
+    position: absolute;
+    left: 50%;
+  }
+
+  .left {
+    left: 0;
+    border-right: 1px solid $silver;
+
+    .top {
+      top: 70px;
+      transform: translateX(-40%) rotate(45deg);
+    }
+
+    .bottom {
+      bottom: 70px;
+      transform: translateX(-40%) rotate(225deg);
+    }
+  }
+
+  .right {
+    right: 0;
+    border-left: 1px solid $silver;
+
+    .top {
+      top: 70px;
+      transform: translateX(-40%);
+
+      .text {
+        display: block;
+      }
+    }
+
+    .bottom {
+      bottom: 70px;
+      transform: translateX(-40%) rotate(-90deg);
+
+      .text {
+        margin-left: 20px;
+
+        span {
+          display: block;
+          padding-top: 6px;
+        }
+      }
+    }
+  }
+
+  .footer {
+    position: absolute;
+    left: 50%;
+    bottom: 70px;
+    transform: translateX(-50%);
+
+    .text {
+      margin-left: 10px;
+    }
   }
 }
