--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -37,7 +37,7 @@
   html {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: none;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   .page {
