--- a/src/config.scss
+++ b/src/config.scss
@@ -19,8 +19,19 @@ $black: #000;
 $white: #fff;
 
 $wildSand: #f5f5f5; // Background on clear theme
-$mineShaft: #202020; // Title color
-$silver: #a3a3a3; // Subtitle color, separator
+$mineShaft: #202020; // Background on dark theme, title color on clear theme
+$mercury: #e9e9e9; // Title color on dark theme
+$silver: #a3a3a3; // Subtitle color, separator on clear theme
+$tundora: #484848; // Separator on dark theme
+
+//////////////////////////
+//         MISC         //
+//////////////////////////
+
+@mixin column() {
+  width: 15%;
+  max-width: 200px;
+}
 
 //////////////////////////
 //        FONTS         //
