--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -41,6 +41,7 @@
       left: 50%;
       bottom: 70px;
       transform: translateX(-50%);
+      z-index: 2;
 
       .text {
         margin-left: 10px;
