--- a/src/pages/Experience/styles.scss
+++ b/src/pages/Experience/styles.scss
@@ -1,3 +1,39 @@
 .Experience {
   composes: page from global;
+  display: flex;
+  background-color: $wildSand;
+
+  .icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .left,
+  .right {
+    @include small-column;
+    position: relative;
+    height: 100%;
+    z-index: 2;
+  }
+
+  .right {
+    .icon {
+      transform: translateY(-50%) rotate(45deg);
+    }
+  }
+
+  .center {
+    position: relative;
+    flex: 1;
+
+    .iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
