--- a/src/config.scss
+++ b/src/config.scss
@@ -18,10 +18,10 @@ $hsm: 500;
 $black: #000;
 $white: #fff;
 
-$wildSand: #f5f5f5; // Background on clear theme
-$mineShaft: #202020; // Background on dark theme, title color on clear theme
+$wildSand: #f5f5f5; // Background on light theme
+$mineShaft: #202020; // Background on dark theme, title color on light theme
 $mercury: #e9e9e9; // Title color on dark theme
-$silver: #a3a3a3; // Subtitle color, separator on clear theme
+$silver: #a3a3a3; // Subtitle color, separator on light theme
 $tundora: #484848; // Separator on dark theme
 
 //////////////////////////
