--- a/src/pages/Experience/styles.scss
+++ b/src/pages/Experience/styles.scss
@@ -3,6 +3,10 @@
   display: flex;
   background-color: $wildSand;
 
+  &.negative {
+    background-color: $mineShaft;
+  }
+
   .icon {
     position: absolute;
     top: 50%;
@@ -16,6 +20,12 @@
     position: relative;
     height: 100%;
     z-index: 2;
+
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .right {
