refrection DOM gets firstground text, README, TODO and things

--- a/src/pages/Home/Preview/styles.scss
+++ b/src/pages/Home/Preview/styles.scss
@@ -22,6 +22,14 @@
       border-color: $silver;
     }
 
+    .middle {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+    }
+
     .top {
       top: 0;
       border-bottom-width: 1px;
